Implementação inicial dos comandos Slash