@@ -46,6 +46,7 @@ import java.util.*;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.TimeUnit;
+import java.util.stream.Collectors;
 
 @Command(
 		name = "anunciar",
@@ -57,7 +58,7 @@ import java.util.concurrent.TimeUnit;
 public class SellCardCommand implements Executable {
 
 	@Override
-	public void execute(User author, Member member, String argsAsText, String[] args, Message message, TextChannel channel, Guild guild) {
+	public void execute(User author, Member member, String argsAsText, String[] args, Message message, TextChannel channel, Guild guild, String prefix) {
 		Kawaipon kp = KawaiponDAO.getKawaipon(author.getId());
 		Deck dk = kp.getDeck();
 
@@ -214,7 +215,7 @@ public class SellCardCommand implements Executable {
 		List<KawaiponCard> kcs = kp.getCards().stream()
 				.filter(kc -> kc.getCard().getId().equals(name))
 				.sorted(Comparator.comparing(KawaiponCard::isFoil))
-				.toList();
+				.collect(Collectors.toList());
 
 		if (kcs.size() > 1) {
 			Main.getInfo().getConfirmationPending().put(author.getId(), true);
