@@ -27,6 +27,7 @@ import javax.imageio.ImageIO;
 import java.awt.image.BufferedImage;
 import java.io.IOException;
 import java.util.*;
+import java.util.stream.Collectors;
 
 public enum Race {
 	HUMAN("Humano",
@@ -133,7 +134,7 @@ public enum Race {
 	public static Pair<Race, Race> getCombo(List<Champion> champs) {
 		List<Race> races = champs.stream()
 				.map(Champion::getRace)
-				.toList();
+				.collect(Collectors.toList());
 		Map<Race, Integer> counts = new HashMap<>();
 
 		for (Race race : Race.validValues()) {
