@@ -24,6 +24,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.concurrent.CompletableFuture;
 import java.util.function.Function;
+import java.util.stream.Collectors;
 
 public class NContract<A> extends CompletableFuture<A> {
 	private final int signers;
@@ -62,7 +63,7 @@ public class NContract<A> extends CompletableFuture<A> {
 			List<A> ordered = signatures.entrySet().stream()
 					.sorted(Comparator.comparingInt(Map.Entry::getKey))
 					.map(Map.Entry::getValue)
-					.toList();
+					.collect(Collectors.toList());
 
 			A result = action.apply(ordered);
 			signatures.clear();
